--- a/frontenddemo/client/src/allcss/main.css
+++ b/frontenddemo/client/src/allcss/main.css
@@ -178,8 +178,9 @@
 
 .patientdropdown {
   width: 200px;
-  height: 40px;
+  height: 100%;
   margin-left: 23px;
+  z-index: 999;
 }
 
 .mainpatintdiv {
